--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,10 @@ body {
   font-size: 12px;
 }
 
+.key input::placeholder {
+  color: #999;
+}
+
 .key.wide {
   width: 60px;
 }
@@ -60,7 +64,8 @@ body {
   width: 120px;
 }
 
-#generateButton {
+#generateButton,
+#loadConfigButton {
   margin-top: 20px;
   padding: 10px 20px;
   font-size: 16px;
@@ -74,7 +79,8 @@ body {
   resize: vertical;
 }
 
-.key input::placeholder {
-  color: #999;
+.error {
+  color: red;
+  margin-top: 10px;
 }
 
