--- a/styles.css
+++ b/styles.css
@@ -142,3 +142,11 @@ button:hover {
   color: #ff6b6b;
 }
 
+[data-tooltip]:hover::after {
+  display: block;
+  position: absolute;
+  content: attr(data-tooltip);
+  border: 1px solid black;
+  background: #fff;
+  padding: .25em;
+}
