--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
   align-items: center;
   min-height: 100vh;
   margin: 0;
+  color: #333;
   background-color: #f0f0f0;
   transition: background-color 0.3s, color 0.3s;
 }
@@ -95,13 +96,14 @@ button {
   font-size: 16px;
   cursor: pointer;
   background-color: #77777777;
-  color: white;
+  color: #333;
   border: none;
   border-radius: 4px;
   transition: background-color 0.3s;
 }
 
 .dark-mode button {
+  color: white;
   background-color: #55555577;
 }
 
