--- a/styles.css
+++ b/styles.css
@@ -152,3 +152,9 @@ button:hover {
   background: #fff;
   padding: .25em;
 }
+
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
